syntax = "proto3";

package protos;

import "Board.proto";

message Game {
    Board board = 1;
    string levelName = 2;
}